--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "generate-password": "^1.4.1",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "8.3.0",
-    "lodash": "4.17.11",
+    "lodash": "^4.17.15",
     "moment": "2.22.2",
     "mustache": "2.3.0",
     "passport": "0.4.0",
