--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "start": "sh bin/start.sh && cross-env NODE_ENV=development nodemon",
+    "stop": "sh bin/stop.sh",
     "start:hmr": "node dist/server",
     "start:prod": "npm run build && node dist/main.js",
     "preinstall": "node bin/gcpSetup.js",
@@ -51,12 +52,12 @@
     "class-validator": "0.9.1",
     "crypto": "1.0.1",
     "fastify-formbody": "2.0.0",
-    "generate-password": "^1.4.1",
-    "gravatar": "^1.6.0",
+    "generate-password": "1.4.1",
+    "gravatar": "1.6.0",
     "jsonwebtoken": "8.3.0",
-    "lodash": "^4.17.15",
+    "lodash": "4.17.15",
     "moment": "2.22.2",
-    "multer": "^1.4.2",
+    "multer": "1.4.2",
     "mustache": "2.3.0",
     "passport": "0.4.0",
     "passport-http-bearer": "1.0.1",
@@ -69,33 +70,33 @@
     "typeorm": "0.2.12"
   },
   "devDependencies": {
-    "@types/express": "4.16.0",
+    "@types/express": "4.16.1",
     "@types/faker": "4.1.5",
-    "@types/jest": "21.1.2",
-    "@types/lodash": "^4.14.110",
+    "@types/jest": "24.0.17",
+    "@types/lodash": "4.14.136",
     "@types/node": "10.5.1",
-    "@types/redis": "^2.8.6",
+    "@types/redis": "2.8.13",
     "@types/supertest": "2.0.4",
     "codecov": "3.0.2",
     "cross-env": "^5.2.0",
     "dotenv": "6.0.0",
     "faker": "^4.1.0",
     "husky": "1.2.0",
-    "jest": "23.2.0",
+    "jest": "24.8.0",
     "lint-staged": "7.2.2",
     "mjml": "4.2.1",
     "nodemon": "1.18.7",
     "prettier": "1.14.2",
     "rimraf": "2.6.2",
-    "superagent-defaults": "^0.1.14",
+    "superagent-defaults": "0.1.14",
     "supertest": "3.3.0",
-    "ts-jest": "23.10.5",
+    "ts-jest": "24.0.2",
     "ts-loader": "4.4.2",
     "ts-node": "7.0.0",
     "tsconfig-paths": "3.4.2",
     "tslint": "5.11.0",
     "tslint-config-prettier": "1.15.0",
-    "typeorm-fixtures": "^0.8.2",
+    "typeorm-fixtures": "0.8.5",
     "typescript": "3.5.3",
     "webpack": "4.14.0",
     "webpack-cli": "3.0.8",
